--- a/template.yaml
+++ b/template.yaml
@@ -56,7 +56,7 @@ spec:
       name: Create Pull Request
       action: publish:github:pull-request
       input:
-        repoUrl: https://github.com/rhdh-demo-gh/app-of-apps
+        repoUrl: github.com/rhdh-demo-gh/app-of-apps
         title: "New Application: ${{ parameters.component | parseEntityRef | pick('name') }}"
         description: Automated PR from the IDP 🚀
         commitMessage: "feat: add application.yaml for ${{ parameters.component | parseEntityRef | pick('name') }}"
