--- a/development/account-portal/application.yaml
+++ b/development/account-portal/application.yaml
@@ -11,6 +11,7 @@ spec:
   source:
     repoURL: https://github.com/account-portal-manifests.git
     targetRevision: main
+    path: ./
   destination:
     server: https://kubernetes.default.svc
     namespace: account-portal-development
