--- a/development/account-portal/application.yaml
+++ b/development/account-portal/application.yaml
@@ -9,6 +9,9 @@ metadata:
 spec:
   project: default
   source:
+    helm:
+      valueFiles:
+      - values.yaml
     repoURL: https://github.com/rhdh-demo-gh/account-portal-manifests.git
     targetRevision: main
     path: ./development
