--- a/development/delete-me/application.yaml
+++ b/development/delete-me/application.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: delete-me
-  namespace: argocd
+  namespace: openshift-gitops
   labels:
     environment: development
     component: delete-me
