--- a/development/accounts-nextjs-demo/application.yaml
+++ b/development/accounts-nextjs-demo/application.yaml
@@ -3,7 +3,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: accounts-nextjs-demo
-  namespace: janus-argocd
+  namespace: openshift-gitops
   labels:
     environment: development
     component: accounts-nextjs-demo
